# linda-listen

./: README.md  index.html  package-lock.json  package.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  clipboard.rs  config.rs  error.rs  gemini.rs  history.rs  lib.rs  main.rs  model.rs  state.rs  transcription.rs  tray.rs
