[package]
name = "linda-listen"
version = "0.1.0"
description = "A local dictation app with optional cleanup"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "linda_listen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
async-trait = "0.1"
arboard = "3"
cpal = "0.17"
directories = "5"
enigo = "0.6"
hound = "3"
keyring = "4.0.0-rc.3"
keyring-core = "0.7.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "sync"] }
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
thiserror = "2"
parakeet-rs = "0.3.4"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.3.1"

[dev-dependencies]
tempfile = "3"
